syntax = "proto3";

package com.road.yishi.proto.voice;

message FetchTokenReq {
  string userId = 1;
}
